--- a/EscapeDragonPalace/EscapeDragonPalace.vcxproj
+++ b/EscapeDragonPalace/EscapeDragonPalace.vcxproj
@@ -150,7 +150,7 @@
     <ClCompile Include="screens.c" />
     <ClCompile Include="small_fish.c" />
     <ClCompile Include="turtle.c">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="weapon.c" />
   </ItemGroup>
@@ -167,7 +167,7 @@
     <ClInclude Include="screens.h" />
     <ClInclude Include="small_fish.h" />
     <ClInclude Include="turtle.h">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClInclude>
     <ClInclude Include="weapon.h" />
